// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`should parse path/to/out.gif 1`] = `
{
  "animationOptions": {
    "frameByStep": 1,
    "stepDurationMs": 100,
  },
  "drawOptions": {
    "colorBackground": "#ffffff",
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#ebedf0",
      "#9be9a8",
      "#40c463",
      "#30a14e",
      "#216e39",
    ],
    "colorEmpty": "#ebedf0",
    "colorSnake": "purple",
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "path/to/out.gif",
  "format": "gif",
}
`;

exports[`should parse /out.svg?color_snake=orange&color_dots=#000,#111,#222,#333,#444 1`] = `
{
  "animationOptions": {
    "frameByStep": 1,
    "stepDurationMs": 100,
  },
  "drawOptions": {
    "colorBackground": "#ffffff",
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#000",
      "#111",
      "#222",
      "#333",
      "#444",
    ],
    "colorEmpty": "#000",
    "colorSnake": "orange",
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "/out.svg",
  "format": "svg",
}
`;

exports[`should parse /out.svg?{"color_snake":"yellow","color_dots":["#000","#111","#222","#333","#444"]} 1`] = `
{
  "animationOptions": {
    "frameByStep": 1,
    "stepDurationMs": 100,
  },
  "drawOptions": {
    "colorBackground": "#ffffff",
    "colorDotBorder": "#1b1f230a",
    "colorDots": [
      "#000",
      "#111",
      "#222",
      "#333",
      "#444",
    ],
    "colorEmpty": "#000",
    "colorSnake": "yellow",
    "sizeCell": 16,
    "sizeDot": 12,
    "sizeDotBorderRadius": 2,
  },
  "filename": "/out.svg",
  "format": "svg",
}
`;
